scenario-1/main.tf
# -------------------------------------------------------------------------------------------
# 1. Create VPC
# 2. Create Internet Gateway
# 3. Create Custom Route table
# 4. Create a Subnet
# 5. Associate Subnet with Route table
# 6. Create a Security Group to allow port 22,80,443
# 7. Create a network interface with an IP in the subnet that was created in Step 4
# 8. Assign an elastic IP to the network interface created in Step 7
# 9. Create Ubuntu Server and install/enable apache2
# -------------------------------------------------------------------------------------------


# ----------------------------- VARIABLES ---------------------------------------------------- #

variable "access_key" {
    type = string
    description = "The AWS access key."
}

variable "secret_key" {
    type = string
    description = "The AWS secret key."
}

variable "region" {
    type = string
    description = "The AWS region."
    default = "us-east-1"
}

variable "subnet_prefix" {
    type = string
    description = "The cidr block for the subnet."
}

# ============================================================================================== #


# Configure the AWS Provider
provider "aws" {
  region  = var.region
  access_key = var.access_key
  secret_key = var.secret_key
}

# 1. Create VPC
resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "prod"
  }
}

# 2. Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id

  tags = {
    Name = "prod"
  }
}

# 3. Create Custom Route table
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "prod"
  }
}

# 4. Create a Subnet
resource "aws_subnet" "subnet-1" {
  vpc_id     = aws_vpc.prod-vpc.id
  cidr_block = var.subnet_prefix
  availability_zone = "us-east-1a"

  tags = {
    Name = "prod"
  }
}

# 5. Associate Subnet with Route table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6. Create a Security Group to allow port 22,80,443
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description = "HTTPS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web_access"
  }
}

# 7. Create a network interface with an IP in the subnet that was created in Step 4
resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
 
}

# 8. Assign an elastic IP to the network interface created in Step 7
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.gw]
}

# 9. Create Ubuntu Server and install/enable apache2
resource "aws_instance" "web-server-instance" {
  ami               = "ami-0ac80df6eff0e70b5"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "terraform-access-key"

  network_interface {
      device_index = 0
      network_interface_id = aws_network_interface.web-server-nic.id
  }

  user_data = <<-EOF
                #! /bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemcl start apache2
                sudo bash -c 'echo Web Server > /var/www/html/index.html'
                EOF


  tags = {
    Name = "ubuntu-webserver"
  }
}
